packages/svelte/tests/compiler-errors/samples/css-global-placement-1/main.svelte
<style>
	/* ok */
	div :global.x {
		color: red;
	}

	/* not ok */
	:global.x {
		color: red;
	}
</style>
